Fix width issue on mobile contact page

--- a/src/styles/desktop/Contact.scss
+++ b/src/styles/desktop/Contact.scss
@@ -63,7 +63,7 @@
 }
 
 .contact {
-  width: 80%;
+  width: 100%;
   height: auto;
   font-weight: 300;
   text-decoration: none;
